--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -67,11 +69,11 @@
 
         </header>
         <!-- Cuerpo Pag -->
-        <main class="mainImg">
+        <main class="mainImg" data-aos="zoom-in" data-os-duration="3000">
             <img src="./images/1-slide-1620187672113-4286385282-35e3225487894f916e378270df53bba01620187746-1400-1400.jpg"
                 alt="imagen de dos buzos, uno negro y uno blanco" class="mainImage">
         </main>
-        <div class="productosDestacados">
+        <div class="productosDestacados" data-aos="fade-up" data-os-duration="5000">
             <section class="titleProdDest">
                 <h2>Productos Destacados</h2>
             </section>
@@ -122,6 +124,9 @@
             
 
         </footer>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </div>
 
