--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -8,6 +8,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../estilos/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,7 +68,7 @@
 	<!-- Cuerpo Pag -->
 
     <section class="contactanos">
-		<h1>
+		<h1 data-aos="fade-right" data-os-duration="3000">
 			Contactanos
 		</h1>
 		<article>
@@ -111,5 +113,8 @@
 
 
 </footer>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
