--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,10 +68,10 @@
 
     </header>
 
-    <h1 class="title">Productos</h1>
+    <h1 class="title" data-aos="fade-right" data-os-duration="3000">Productos</h1>
     <section class="productos">
         
-            <div class="detalleprod">
+            <div class="detalleprod" >
                 <img src="../images/productos/E6437_1.jpg" alt="Buzo Loyd Forro Polar Light Grey Melange">
                 <p>Loyd Forro Polar Light Grey Melange</p>
                 <p class="precio">$12000</p>
@@ -153,5 +155,8 @@
 
 
     </footer>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
