--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./estilos/style.css">
+    <link rel="stylesheet" href="./estilos/estilos.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <meta charset="UTF-8" />
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Peace Izy</title>
 </head>
 <div class="gridContent">
 
@@ -155,7 +155,7 @@
 
             </section>
         </div>
-        <hr class="divindex">
+        <hr class="divIndex">
         <section class="ig">
             <script src="https://apps.elfsight.com/p/platform.js" defer></script>
             <div class="elfsight-app-63e92782-17e1-45e9-bb32-dfa4200464cc"></div>
