--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <link rel="stylesheet" href="./estilos/estilos.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <meta name="description" content="Venta de Buzo de diseño propio a un precio imperdible!. Envios a todo el pais. @peaceicyar">
+    <meta name="keywords" content="Buzos, Argentina, Baratos, Ropa, Indumentaria, Peaceizy">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <title>Peace Izy</title>
 </head>
 <div class="gridContent">
