--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -16,7 +16,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peace Izy</title>
+    <meta name="description" content="Peace Izy sepreocupa por el bienestar de sus clientes, si tiene dudas no dudes en contactarnos!">
+    <meta name="keywords" content="Contacto, peace izy, Reclamo, duda, Queja, Pregunta">
+    <title>Contactanos-Peace Izy</title>
 </head>
 <body data-aos="zoom-in">
     <!-- Nav Bar -->
