--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -13,10 +13,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <meta name="description" content="Peace izy es una empresa dedicada a la fabricacion de buzos que surge de la idea de ayudar a que la gente vista algo unico">
+    <meta name="keywords" content="Buzos, Peace Izy, Diseño, Sobre Peace izy, informacion ">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peace Izy</title>
+    <title>Sobre Nosotros-Peace Izy</title>
 </head>
 <body data-aos="zoom-in">
     <!-- Nav Bar -->
