--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -18,10 +18,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <meta name="description" content="Peace Izy se dedica a fabricar buzos con diseño unico y exclusivo los cuales salen a la venta mediante drops">
+    <meta name="keyword" content="Peace izi, Productos, Buzos, Diseños, Buzos Drops">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peace Izy</title>
+    <title>Productos-Peace Izy</title>
 </head>
 
 <body>
