Preparacion Entrega Final

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <main class="mainImg" data-aos="zoom-in" data-os-duration="3000">
             <img src="./images/mainImg/1-slide-1620187672113-4286385282-35e3225487894f916e378270df53bba01620187746-1400-1400-min.jpg"
                 alt="imagen de dos buzos, uno negro y uno blanco" class="mainImage">
+                
         </main>
         <div class="productosDestacados" data-aos="fade-up" data-os-duration="5000">
             <section class="titleProdDest">
@@ -132,9 +133,10 @@
                 <p class="descCard">Trasnferencia Bancaria, Tarjetas de Credito y Debito</p>
             </div>
         </div>
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-76fc9da3-9c64-46d7-87c7-8b9fa82eea28"></div>
         
+        <section class="wpp">
+            <a href="https://wa.me/543875145361?text=Hola%20,estoy%20interesado%20en%20sus%20productos" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+        </section>
 
 
 
