--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -106,9 +106,9 @@
             </div>
         </div>
     </div>
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-                <div class="elfsight-app-76fc9da3-9c64-46d7-87c7-8b9fa82eea28"></div>
-    
+    <section class="wpp">
+        <a href="https://wa.me/543875145361?text=Hola%20,estoy%20interesado%20en%20sus%20productos" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+    </section>
     
 
 
