--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                 AOS.init();
             </script>
         <script src="./assets/carrito.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </body>
 </div>
 
