--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -16,8 +16,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+        <link rel="stylesheet" href="../estilos/estilos.css">
     <meta name="description" content="Peace Izy se dedica a fabricar buzos con diseño unico y exclusivo los cuales salen a la venta mediante drops">
     <meta name="keyword" content="Peace izi, Productos, Buzos, Diseños, Buzos Drops">
     <meta charset="UTF-8">
@@ -65,7 +67,7 @@
                         <li><span class="material-symbols-outlined" id="btnCarrito">
                                 shopping_cart
                             </span></li>
-                        <li><span class="material-symbols-outlined">
+                        <li><span class="material-symbols-outlined" id="btnFav">
                                 account_circle
                             </span></li>
                     </div>
@@ -97,7 +99,7 @@
             <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
         </div>
     </div>
-    <!-- Pie de Pagina -->
+    
     <!-- Pie de Pagina -->
     <footer class="footer">
         <section class="gridFooter">
@@ -148,11 +150,13 @@
     <script>
         AOS.init();
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="../assets/main.js"></script>
     <script src="../assets/carrito.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
